<resources>
    <string name="app_name" translatable="false">Keyboard Switcher</string>
    <string name="app_name_short" translatable="false">KeyboardS</string>

    <string name="keyboards">Keyboards</string>
    <string name="shortcut_name">Keyboard</string>

    <string name="explanation_service_special_use" translatable="false">Permanent service that displays notification of keyboard changes.</string>

    <string name="app_warning_key" translatable="false">app_warning_key</string>
    <string name="app_warning"> This application makes it easy to switch keyboard if you do not have an effective way integrated into the operating system and the keyboard of your device.\n\nIn Lollipop and later versions of Android, a long press on the space bar of your keyboard can make it easy to change. System-managed notifications also allow this change.\n\nIn these cases, the application may be superfluous.</string>

    <string name="hint_text_test">Test area</string>

    <string name="launching_selection">The keyboard selection dialog cannot be opened automatically</string>

    <string name="notification_keyboard_title">Switch the keyboard</string>
    <string name="notification_keyboard_content_text">Tap to select the default keyboard.</string>

    <string name="general">General</string>

    <string name="settings_ime_available_key" translatable="false">settings_ime_available_key</string>
    <string name="settings_ime_available_title">Available keyboards</string>

    <string name="settings_ime_change_key" translatable="false">settings_ime_choose_key</string>
    <string name="settings_ime_change_title">Change the default keyboard</string>

    <string name="error_unavailable_keyboard_feature">Your system is not able to open the keyboard selection dialog.</string>
    <string name="error_notification_permission">The app does not have permission to display the notification.</string>
    <string name="error_overlay_permission">The app does not have permission to display an overlay.</string>
    <string name="error_accessibility_permission">Enable KeyboardS in Accessibility settings to show the floating button above the keyboard.</string>

    <string name="direct_keyboard_switch">Direct keyboard switch</string>
    <string name="settings_direct_keyboard_switch_key" translatable="false">settings_direct_keyboard_switch_key</string>
    <string name="settings_direct_keyboard_switch_title">Switch between two keyboards directly</string>
    <string name="settings_direct_keyboard_switch_description">Requires secure settings permission granted with ADB or Shizuku.</string>
    <string name="settings_direct_keyboard_first_key" translatable="false">settings_direct_keyboard_first_key</string>
    <string name="settings_direct_keyboard_first_title">First keyboard</string>
    <string name="settings_direct_keyboard_second_key" translatable="false">settings_direct_keyboard_second_key</string>
    <string name="settings_direct_keyboard_second_title">Second keyboard</string>
    <string name="settings_direct_keyboard_permission_key" translatable="false">settings_direct_keyboard_permission_key</string>
    <string name="settings_direct_keyboard_permission_title">Secure settings permission</string>
    <string name="settings_direct_keyboard_not_selected">Not selected</string>
    <string name="settings_direct_keyboard_unavailable">Unavailable: %1$s</string>
    <string name="settings_direct_keyboard_no_enabled_keyboards">No enabled keyboard found</string>
    <string name="settings_direct_keyboard_permission_granted">Granted</string>
    <string name="settings_direct_keyboard_permission_adb">Run: %1$s</string>
    <string name="settings_direct_keyboard_permission_shizuku">Tap to authorize with Shizuku, or run: %1$s</string>
    <string name="settings_direct_keyboard_permission_shizuku_ready">Tap to grant with Shizuku.</string>
    <string name="settings_direct_keyboard_permission_granted_toast">Secure settings permission granted.</string>
    <string name="settings_direct_keyboard_permission_required_toast">Secure settings permission is required for direct switching.</string>
    <string name="settings_direct_keyboard_permission_failed_toast">Unable to grant secure settings permission.</string>

    <string name="startup">Startup</string>

    <string name="settings_launch_startup_key" translatable="false">settings_launch_startup</string>
    <string name="settings_launch_startup_title">Launch at startup</string>

    <string name="notification">Notification</string>

    <string name="settings_notification_key" translatable="false">settings_notification_key</string>
    <string name="settings_notification_title">Enable notification</string>
    <string name="settings_notification_description">Enable a notification to choose a keyboard</string>

    <string name="floating_button">Floating keyboard button</string>

    <string name="settings_floating_button_key" translatable="false">settings_floating_button_key</string>
    <string name="settings_floating_button_title">Enable floating button</string>
    <string name="settings_floating_button_description">Enable a floating button to choose a keyboard</string>
    <string name="settings_floating_button_keyboard_visibility_key" translatable="false">settings_floating_button_keyboard_visibility_key</string>
    <string name="settings_floating_button_keyboard_visibility_title">Show only when keyboard is open</string>
    <string name="settings_floating_button_keyboard_visibility_description">Hide the floating button when the keyboard is closed</string>
    <string name="accessibility_service_label">KeyboardS floating button</string>
    <string name="accessibility_service_description">Shows the floating keyboard switcher above the on-screen keyboard when the matching option is enabled.</string>

    <string name="floating_button_warning">This feature may be unstable.</string>
    <string name="floating_button_battery_warning">If the button disappears, try keeping this settings screen open in the background or modifying the battery optimization behavior.</string>
    <string name="floating_button_notification_warning">A notification is essential for the button to remain visible, but this notification can be hidden in the settings.</string>
    <string name="floating_button_above_screen">You must accept the permissions to permit the floating button to be drawing over other apps.</string>

    <string name="auto_switch_message">Keyboard switched: %1$s</string>

    <string name="settings_floating_button_lock_key" translatable="false">settings_floating_button_lock_key</string>
    <string name="settings_floating_button_lock_title">Lock position</string>

    <string name="settings_colors_key" translatable="false">settings_colors_key</string>
    <string name="settings_colors_title">Icon color</string>
    <string name="settings_colors_description" translatable="false">[color]</string>
    <string name="settings_floating_background_color_key" translatable="false">settings_floating_background_color_key</string>
    <string name="settings_floating_background_color_title">Background color</string>

    <string name="settings_floating_size_key" translatable="false">settings_floating_size_key</string>
    <string name="settings_floating_size_title">Button size</string>

    <string name="about_title">About</string>
    <string name="information">Information</string>
    <string name="powered_by">Powered by</string>
    <string name="source_code">Source code:</string>
    <string name="donation">Donation</string>
    <string name="play_store_donation">PlayStore Donation</string>
    <string name="about_version">Version:</string>
    <string name="contact_title">Contact</string>
    <string name="developer">Developer</string>
    <string name="html_text_purpose">This app is designed to &lt;strong&gt;easily change virtual keyboard&lt;/strong&gt;.</string>
    <string name="html_text_free">%1$s is &lt;strong&gt;free&lt;/strong&gt;, &lt;strong&gt;libre&lt;/strong&gt; and &lt;strong&gt;without advertising&lt;/strong&gt;. It is provided as is, under &lt;strong&gt;GPLv3&lt;/strong&gt; license, without any warranty.</string>
    <string name="html_text_contribution">In order to &lt;strong&gt;keep our freedom&lt;/strong&gt;, &lt;strong&gt;fix bugs&lt;/strong&gt;, &lt;strong&gt;add features&lt;/strong&gt; and &lt;strong&gt;to be always active&lt;/strong&gt;, we count on your &lt;strong&gt;contribution.&lt;/strong&gt;</string>

    <string name="open">Open</string>
    <string name="cancel">Cancel</string>

</resources>
