<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<PreferenceCategory
		android:title="@string/general">
        <Preference
            android:key="@string/settings_ime_available_key"
            android:icon="@drawable/ic_keyboard_24dp"
            android:title="@string/settings_ime_available_title"
            android:persistent="false" />
		<Preference
			android:key="@string/settings_ime_change_key"
            android:icon="@drawable/ic_keyboard_switch_24dp"
			android:title="@string/settings_ime_change_title"
			android:persistent="false" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/startup">
		<SwitchPreferenceCompat
			android:key="@string/settings_launch_startup_key"
            android:icon="@drawable/ic_line_start_circle_24dp"
			android:title="@string/settings_launch_startup_title"
			android:defaultValue="false"/>
	</PreferenceCategory>
    <PreferenceCategory
        android:title="@string/notification">
        <SwitchPreferenceCompat
            android:key="@string/settings_notification_key"
            android:icon="@drawable/ic_notification_24dp"
            android:title="@string/settings_notification_title"
            android:description="@string/settings_notification_description"
            android:defaultValue="false"/>
    </PreferenceCategory>
	<PreferenceCategory
		android:title="@string/floating_button">
		<SwitchPreferenceCompat
			android:key="@string/settings_floating_button_key"
            android:icon="@drawable/ic_float_24dp"
			android:title="@string/settings_floating_button_title"
			android:defaultValue="false"/>
		<SwitchPreferenceCompat
			android:key="@string/settings_floating_button_lock_key"
            android:icon="@drawable/ic_lock_24dp"
			android:title="@string/settings_floating_button_lock_title"
			android:dependency="@string/settings_floating_button_key"
			android:defaultValue="false"/>
        <com.kunzisoft.androidclearchroma.ChromaPreferenceCompat
            xmlns:chroma="http://schemas.android.com/apk/res-auto"
            android:key="@string/settings_colors_key"
            android:icon="@drawable/ic_colors_24dp"
            android:title="@string/settings_colors_title"
            android:summary="@string/settings_colors_description"
            android:dependency="@string/settings_floating_button_key"
            chroma:chromaShapePreview="CIRCLE"
            chroma:chromaColorMode="ARGB"
            chroma:chromaIndicatorMode="HEX"
            chroma:chromaInitialColor="@color/colorPrimaryLight"/>
		<SeekBarPreference
			android:key="@string/settings_floating_size_key"
            android:icon="@drawable/ic_arrows_output_24dp"
			android:title="@string/settings_floating_size_title"
			app:min="20"
			app:defaultValue="100"
			app:seekBarIncrement="10"
			android:max="220"
			android:dependency="@string/settings_floating_button_key"/>
	</PreferenceCategory>

</PreferenceScreen>
